updated the backend

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ APP_ENV=development
 APP_DEBUG=true
 APP_PORT=8000
 
+# Frontend URL for CORS
+FRONTEND_URL=http://localhost:5173
+
 # Database
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/automation_db
 
