updated the code to make postgress url on its own

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,11 @@ APP_PORT=8000
 FRONTEND_URL=http://localhost:5173
 
 # Database
-DATABASE_URL=postgresql+psycopg_async://postgres:postgres@localhost:5432/automation_db
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_NAME=automation_db
 
 # JWT Settings
 JWT_SECRET_KEY=your-super-secret-key-change-in-production
