--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "fastapi>=0.128.0",
     "httpx>=0.28.1",
     "psycopg>=3.3.2",
+    "psycopg2-binary>=2.9.11",
     "pydantic-settings>=2.12.0",
     "pydantic[email]>=2.12.5",
     "python-jose[cryptography]>=3.5.0",
