--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,7 @@ dependencies = [
     "cryptography>=46.0.3",
     "fastapi>=0.128.0",
     "httpx>=0.28.1",
-    "psycopg>=3.3.2",
-    "psycopg2-binary>=2.9.11",
+    "psycopg[binary]>=3.3.2",
     "pydantic-settings>=2.12.0",
     "pydantic[email]>=2.12.5",
     "python-jose[cryptography]>=3.5.0",
