--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "alembic>=1.18.1",
     "asyncpg>=0.31.0",
     "bcrypt>=5.0.0",
+    "beautifulsoup4>=4.12.0",
     "cryptography>=46.0.3",
     "fastapi>=0.128.0",
     "httpx>=0.28.1",
